--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "idb": "^8.0.0",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18",
