--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
