--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@nfteyez/sol-rayz": "^0.10.2",
+    "@pythnetwork/client": "^2.22.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
