--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@solana/web3.js": "^1.95.4",
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-virtual": "^3.10.9",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "idb": "^8.0.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18",
@@ -50,6 +52,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
+    "react-window": "^1.8.10",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.2",
@@ -57,9 +60,11 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
