--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
@@ -62,6 +63,7 @@
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-window": "^1.8.8",
