--- a/package.json
+++ b/package.json
@@ -40,14 +40,16 @@
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-virtual": "^3.10.9",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "idb": "^8.0.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.445.0",
-    "next": "14.2.13",
+    "next": "^14.2.13",
     "nodemailer": "^6.9.16",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
